# invbeertory

./: .env.sample  .eslintrc.js  .gitignore  .prettierrc.js  .sass-lint.yml  Cargo.toml  README.md  Trunk.toml  gatsby-config.js  gatsby-node.js  index.html  index.scss  inventory.csv  manifest.webmanifest  netlify.toml  package.json  tsconfig.json  wrangler.toml
.github/workflows/: deploy.yml
.netlify/: state.json
crates/dashboard/: Cargo.toml  index.html  manifest.webmanifest
crates/dashboard/src/components/charts/: stacked_bar.rs  xkcd.js  xy.rs
crates/dashboard/src/formatting/: brewer.rs
crates/dashboard/src/pages/: beer.rs  home.rs  mod.rs
crates/dashboard/src/storage/: inventory.csv
crates/dashboard/styles/: 404.css  colours.css  layout.css
src/: app.rs  lib.rs  main.rs  not_found.rs  types.ts
src/components/: card.tsx  deck.rs  deck.tsx  header.rs  header.tsx  hero.rs  hero.tsx  index.ts  info.rs  info.tsx  layout.css  layout.rs  layout.tsx  mod.rs  pieChart.tsx  search.rs  search.tsx  seo.tsx  table.rs  table.tsx
src/components/charts/: bar.rs  bar.tsx  bindings.rs  colours.rs  index.ts  line.rs  line.tsx  mod.rs  pie.rs  pie.tsx  radar.rs  radar.tsx  stackedBar.tsx  stacked_bar.rs  xy.rs  xy.tsx
src/components/styles/: 404.module.scss  card.module.scss  colours.module.scss  deck.module.scss  layout.module.scss  main.scss  search.scss  table.module.scss
src/components/table/: index.tsx  style.module.scss  types.ts
src/components/table/columns/: abv.tsx  brewery.tsx  index.ts  name.tsx  purchased.tsx  size.tsx  stock.tsx  style.tsx  year.tsx
src/formatting/: brewer.rs  mod.rs  style.rs  title.rs
src/pages/: 404.tsx  beer.rs  brewery.tsx  graphs.rs  graphs.tsx  history.rs  history.tsx  home.rs  index.tsx  mod.rs  not_found.rs  stock.rs  stock.tsx
src/storage/: beer.rs  mod.rs  stock.rs
src/templates/: beer.tsx
src/types/: beer.ts  coffee.ts  index.ts  stock.ts
src/utils/: colours.ts  dates.tsx  filters.ts  index.ts  object.ts  occurences.ts  sort.ts  style.ts  url.ts
styles/: colours.module.scss  deck.css  main.css  search.css  search.module.scss  table.css  variables.scss
