[package]
name = "invbeertory"
version = "0.1.0"
edition = "2021"
description = "Simple beer inventory display"
readme = "README.md"
authors = ["Cian Butler <butlerx@notthe.cloud>"]
repository = "https://github.com/butlerx/invbeertory"
license = "MIT"
keywords = [
  "beer",
  "yew",
  "rust",
  "web",
  "inventory",
  "display",
  "google-sheets",
  "wasm",
]
categories = ["wasm", "web", "beer", "inventory", "display", "simple"]

[[bin]]
name = "client_hydrate"

[[bin]]
name = "server"

[dependencies]
chrono = "0.4"
csv = "1.1"
getrandom = { version = "0.2", features = ["js"] }
implicit-clone = { version = "0.4", features = ["serde", "map"] }
js-sys = "0.3"
rand = "0.8"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlDivElement", "SvgsvgElement"] }
yew-router = "0.17"
yew = { version = "0.20", features = ["csr", "ssr", "hydration"] }
log = "0.4"
futures = { version = "0.3", features = ["std"], default-features = false }
hyper-util = "0.1.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7"
tower = { version = "0.5", features = ["make"] }
tower-http = { version = "0.6", features = ["fs"] }
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1.4", features = ["server", "http1"] }

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"
