[package]
name = "invbeertory"
version = "0.1.0"
edition = "2021"
description = "Simple beer inventory display"
readme = "README.md"
authors = ["Cian Butler <butlerx@notthe.cloud>"]
repository = "https://github.com/butlerx/invbeertory"
license = "MIT"
keywords = [
  "beer",
  "yew",
  "rust",
  "web",
  "inventory",
  "display",
  "google-sheets",
  "wasm",
]
categories = ["wasm", "web", "beer", "inventory", "display", "simple"]

[[bin]]
name = "client_hydrate"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2", features = ['http', 'axum'] }
worker-macros = { version = "0.4.2", features = ['http'] }
axum = { version = "0.7", default-features = false, features = [
  "form",
  "http1",
  "json",
  "matched-path",
  "original-uri",
  "query",
  "tower-log",
  "tracing",
] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }

wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

chrono = "0.4"
csv = "1.1"
getrandom = { version = "0.2", features = ["js"] }
implicit-clone = { version = "0.4", features = ["serde", "map"] }
js-sys = "0.3"
rand = "0.8"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlDivElement", "SvgsvgElement"] }
yew-router = "0.17"
yew = { version = "0.20", features = ["csr", "ssr", "hydration"] }
log = "0.4"
futures = { version = "0.3", features = ["std"], default-features = false }
hyper-util = "0.1.9"
